syntax = "proto3";

package prediction;

service PredictionService {
    // Returns a Over/Under goals prediction for a given fixture
    rpc GetOverUnderGoalsForFixture(OverUnderRequest) returns (OverUnderGoalsResponse) {}
}

message OverUnderRequest {
    uint64 fixture_id = 1;
    float goals = 2;
    bool in_play = 3;
}

message OverUnderGoalsResponse {
    uint64 fixture_id = 1;
    float goals = 2;
    OddsProbability under = 3;
    OddsProbability over = 4;
}

message OddsProbability {
    float probability = 3;
    float odds = 4;
}
